=======
CHANGES
=======
0.4.2
-----

- orm

   - fixed endless loop issue when using lazy="dynamic" on both 
     sides of a bi-directional relationship [ticket:872]

   - clarified the error message which occurs when you try to update()
     an instance with the same identity key as an instance already present
     in the session.

   - some clarifications and fixes to merge(instance, dont_load=True).  
     fixed bug where lazy loaders were getting disabled on returned instances.
     Also, we currently do not support merging an instance which has uncommitted
     changes on it, in the case that dont_load=True is used....this will
     now raise an error.  This is due to complexities in merging the 
     "committed state" of the given instance to correctly correspond to the
     newly copied instance, as well as other modified state.  
     Since the use case for dont_load=True is caching, the given instances 
     shouldn't have any uncommitted changes on them anyway.
     We also copy the instances over without using any events now, so that
     the 'dirty' list on the new session remains unaffected.

- dialects

   - MSSQL/PyODBC no longer has a global "set nocount on".

0.4.1
-----

- sql

  - the "shortname" keyword parameter on bindparam() has been 
    deprecated.
  
  - Added contains operator (generates a "LIKE %<other>%" clause).

  - anonymous column expressions are automatically labeled.  
    e.g. select([x* 5]) produces "SELECT x * 5 AS anon_1".
    This allows the labelname to be present in the cursor.description
    which can then be appropriately matched to result-column processing
    rules. (we can't reliably use positional tracking for result-column 
    matches since text() expressions may represent multiple columns).
  
  - operator overloading is now controlled by TypeEngine objects - the 
    one built-in operator overload so far is String types overloading
    '+' to be the string concatenation operator.