@@ -3,7 +3,14 @@ CHANGES
 =======
 0.4.2
 -----
-
+- sql
+    - added new flag to String and create_engine(), assert_unicode=(True|False|None).
+    When convert_unicode=True, this flag also defaults to `True`, and results in all 
+    unicode conversion operations raising an exception when a non-unicode bytestring
+    is passed as a bind parameter.  It is strongly advised that all unicode-aware
+    applications make proper use of Python unicode objects (i.e. u'hello' and 
+    not 'hello').
+    
 - orm
 
    - fixed endless loop issue when using lazy="dynamic" on both 
